--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
       </tr>
       <tr>
         <td>C++ ⭐⭐⭐⭐</td>
-        <td>Web Development ⭐⭐</td>
+        <td>HTML ⭐⭐⭐⭐</td>
       </tr>
+      <tr>
+        <td>Python ⭐⭐⭐⭐</td>
+        <td>MySQL ⭐⭐⭐⭐</td>
       <tr>
         <td>Painting ⭐⭐⭐</td>
         <td>Playing Guitar ⭐⭐⭐</td>
