--- a/index.html
+++ b/index.html
@@ -4,19 +4,57 @@
 <head>
   <meta charset="utf-8">
   <title>Priyanshu Acharya's Personal Site</title>
+
+  <style>
+    body
+    {
+       background-color: 	#CCF3EE;
+    }
+    #heading
+    {
+      background-color: blue;
+      border-style: none;
+      height: 2px;
+    }
+    #bio
+    {
+      border-radius: 25px;
+      padding: 20px;
+      border: 2px dotted blue;
+    }
+    #breaks
+    {
+      border-style: none;
+      border-top-style: dotted;
+      border-width: 5px;
+      border-color: blue;
+      width: 5%;
+    }
+    #ss
+    {
+      background-color: blue;
+    }
+    ol
+    {
+      text-align: center;
+      list-style-position: inside;
+    }
+  </style>
 </head>
 
 <body>
   <center>
-    <hr noshade size="3">
+    <hr id="heading">
     <h1>Priyanshu Acharya</h1>
-    <img src="Priyanshu Acharya.png" alt="Profie picture of Priyanshu Acharya" height="300" width="300">
-    <hr noshade size="3">
-    <p><em>Computer Science Student</em> at <em><strong><a href="https://www.sxccal.edu/">St. Xavier's College, Kolkata</a></strong></em></p>
-    <p>I am a Second Year CS undergrad. I am an Explorer, Flexible Learner, Programmer and a novice Web Developer. I have keen interest in the Indian Politics and Geopolitical Issues. </p>
+    <img src="Priyanshu Acharya.png" alt="Profie picture of Priyanshu Acharya" height="250" width="250">
+    <hr id="heading">
+    <br>
+    <p id="bio"><em>Computer Science Student</em> at <em><strong>St. Xavier's College, Kolkata</strong></em><br>
+    I am a Second Year CS undergrad. I am an Explorer, Flexible Learner, Programmer and a novice Web Developer. I have keen interest in the Indian Politics and Geopolitical Issues. </p>
   </center>
-  <hr>
   <br>
+  <hr id="ss">
+  <center>
   <h3>Educational Qualifications</h3>
   <table border="1" cellspacing="5">
     <thead>
@@ -55,16 +93,14 @@
     </tbody>
   </table>
   <br>
-  <hr>
-  <br>
+  <hr id="breaks">
   <h3>Hobbies</h3>
   <ol type="A">
     <li>Reading books</li>
     <li>Nurturing Current Affairs</li>
     <li>Programming in new languages</li>
   </ol>
-  <br>
-  <hr>
+  <hr id="breaks">
   <h3>Languages</h3>
   <table border="1" cellspacing='3'>
     <tbody>
@@ -78,7 +114,8 @@
       </tr>
     </tbody>
   </table>
-  <hr>
+  <br>
+  <hr id="breaks">
   <h3>Skills</h3>
   <table border="1" cellspacing='3'>
     <tbody>
@@ -99,11 +136,13 @@
       </tr>
     </tbody>
   </table>
-  <hr>
+</center>
+  <br>
+  <hr id="breaks">
   <center>
     <a href="Contact.html">Contact Me</a>
   </center>
-  <hr>
+  <hr id="ss">
 </body>
 
 </html>
