--- a/index.html
+++ b/index.html
@@ -4,42 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Priyanshu Acharya's Personal Site</title>
-
-  <style>
-    body
-    {
-       background-color: 	#CCF3EE;
-    }
-    #heading
-    {
-      background-color: blue;
-      border-style: none;
-      height: 2px;
-    }
-    #bio
-    {
-      border-radius: 25px;
-      padding: 20px;
-      border: 2px dotted blue;
-    }
-    #breaks
-    {
-      border-style: none;
-      border-top-style: dotted;
-      border-width: 5px;
-      border-color: blue;
-      width: 5%;
-    }
-    #ss
-    {
-      background-color: blue;
-    }
-    ol
-    {
-      text-align: center;
-      list-style-position: inside;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -50,7 +15,7 @@
     <hr id="heading">
     <br>
     <p id="bio"><em>Computer Science Student</em> at <em><strong>St. Xavier's College, Kolkata</strong></em><br>
-    I am a Second Year CS undergrad. I am an Explorer, Flexible Learner, Programmer and a novice Web Developer. I have keen interest in the Indian Politics and Geopolitical Issues. </p>
+    I am a Second Year CS undergrad. I am an Explorer, Flexible Learner, Programmer and a novice Web Developer.I have keen interest in the Indian Politics and Geopolitical Issues. </p>
   </center>
   <br>
   <hr id="ss">
