Ext css implemented

--- a/Contact.html
+++ b/Contact.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Priyanshu's Contact</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <hr>
+    <hr id="heading">
     <center>
       <h1>Contact Details</h1>
       </center>
-      <hr>
+      <hr id="heading">
       <br>
     <p>You can contact me from the following: -</p>
     <ul type="Square">
@@ -17,8 +18,9 @@
       <li><a href="https://www.linkedin.com/in/priyanshu-acharya-330366234?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BL5WpFZ6kSvON0ov4kDLtYQ%3D%3D">Linkedin</a></li>
       <li><a href="https://www.instagram.com/priyanshu___acharya/">Instagram</a></li>
     </ul>
-    <hr size="2">
-    <h2>Enter your details so that I can get in touch with you</h2>
+    <br>
+    <hr id="breaks">
+    <h3>Enter your details so that I can get in touch with you</h3>
     <form enctype="text/plain" action="mailto:priyanshu.social18@gmail.com" method="post">
       <label for="">Your Name</label>
       <input type="text" name="Your Name: - " value="">
@@ -33,7 +35,7 @@
     </form>
     <br>
     <br>
-    <hr size="2">
+    <hr id="breaks">
     <center>
       <button type="button" name="button"><a href="index.html">Previous Page</a></button>
     </center>
