Class selectors used

--- a/Contact.html
+++ b/Contact.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <hr id="heading">
+    <hr class="heading">
     <center>
       <h1>Contact Details</h1>
       </center>
-      <hr id="heading">
+      <hr class="heading">
       <br>
     <p>You can contact me from the following: -</p>
     <ul type="Square">
@@ -19,7 +19,7 @@
       <li><a href="https://www.instagram.com/priyanshu___acharya/">Instagram</a></li>
     </ul>
     <br>
-    <hr id="breaks">
+    <hr class="breaks">
     <h3>Enter your details so that I can get in touch with you</h3>
     <form enctype="text/plain" action="mailto:priyanshu.social18@gmail.com" method="post">
       <label for="">Your Name</label>
@@ -35,7 +35,7 @@
     </form>
     <br>
     <br>
-    <hr id="breaks">
+    <hr class="breaks">
     <center>
       <button type="button" name="button"><a href="index.html">Previous Page</a></button>
     </center>
