--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
 <body>
   <center>
-    <hr id="heading">
+    <hr class="heading">
     <h1>Priyanshu Acharya</h1>
     <img src="Priyanshu Acharya.png" alt="Profie picture of Priyanshu Acharya" height="250" width="250">
-    <hr id="heading">
+    <hr class="heading">
     <br>
     <p id="bio"><em>Computer Science Student</em> at <em><strong>St. Xavier's College, Kolkata</strong></em><br>
     I am a Second Year CS undergrad. I am an Explorer, Flexible Learner, Programmer and a novice Web Developer.I have keen interest in the Indian Politics and Geopolitical Issues. </p>
   </center>
   <br>
-  <hr id="ss">
+  <hr class="ss">
   <center>
   <h3>Educational Qualifications</h3>
   <table border="1" cellspacing="5">
@@ -58,14 +58,14 @@
     </tbody>
   </table>
   <br>
-  <hr id="breaks">
+  <hr class="breaks">
   <h3>Hobbies</h3>
   <ol type="A">
     <li>Reading books</li>
     <li>Nurturing Current Affairs</li>
     <li>Programming in new languages</li>
   </ol>
-  <hr id="breaks">
+  <hr class="breaks">
   <h3>Languages</h3>
   <table border="1" cellspacing='3'>
     <tbody>
@@ -80,7 +80,7 @@
     </tbody>
   </table>
   <br>
-  <hr id="breaks">
+  <hr class="breaks">
   <h3>Skills</h3>
   <table border="1" cellspacing='3'>
     <tbody>
@@ -103,11 +103,11 @@
   </table>
 </center>
   <br>
-  <hr id="breaks">
+  <hr class="breaks">
   <center>
     <a href="Contact.html">Contact Me</a>
   </center>
-  <hr id="ss">
+  <hr class="ss">
 </body>
 
 </html>
