--- a/Contact.html
+++ b/Contact.html
@@ -24,13 +24,13 @@
     <h3>Enter your details so that I can get in touch with you</h3>
     <form enctype="text/plain" action="mailto:priyanshu.social18@gmail.com" method="post">
       <label for="">Your Name</label>
-      <input type="text" name="Your Name: - " value="">
+      <input type="text" name="Your Name: - " placeholder="Your Name">
       <br><br>
       <label for="">Your Email Id</label>
-      <input type="email" name="Your Email Id: - " value="">
+      <input type="email" name="Your Email Id: - " placeholder="Your Email">
       <br><br>
       <label for="">Enter your message</label>
-      <textarea name="Enter your message: - " rows="10" cols="80"></textarea>
+      <textarea name="Enter your message: - " rows="10" cols="80" placeholder="Enter your message"></textarea>
       <br><br>
       <input type="submit" name="" value="Send">
     </form>
