--- a/Contact.html
+++ b/Contact.html
@@ -27,10 +27,10 @@
       <input type="text" name="Your Name: - " placeholder="Your Name">
       <br><br>
       <label for="">Your Email Id</label>
-      <input type="email" name="Your Email Id: - " placeholder="Your Email">
+      <input type="email" name="Your Email Id: - " placeholder="Your Email" required>
       <br><br>
       <label for="">Enter your message</label>
-      <textarea name="Enter your message: - " rows="10" cols="80" placeholder="Enter your message"></textarea>
+      <textarea name="Enter your message: - " rows="10" cols="80" placeholder="Enter your message" required></textarea>
       <br><br>
       <input type="submit" name="" value="Send">
     </form>
