--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
   <body>
     <hr class="heading">
     <center>
-      <h1>Contact Details check</h1>
+      <h1>Contact Details</h1>
       </center>
       <hr class="heading">
       <br>
